Update run.sh
Signed-off-by: Gautam Mahajan <159855180+Gautam9981@users.noreply.github.com>